<resources>
    <string name="app_name">ProjectAND</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="hearticon">heartIcon</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="recipe">Recipe</string>
    <string name="search">search</string>
    <string name="recipeimg">recipeImg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guest">guest</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">sign out</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ingredients">ingredients</string>
</resources>
